--- a/configuration/experiment_runs1.yml
+++ b/configuration/experiment_runs1.yml
@@ -1,242 +1,8 @@
 - dataset: adult
-  model: gate
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
-      tol: 1.0e-05
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 8
-    batch_size:
-    - 1024
-    - 2048
-    - 4096
-    tree_depth:
-    - 4
-    - 6
-    num_trees:
-    - 4
-    - 8
-    chain_trees:
-    - false
-    - true
-    gflu_stages:
-    - 3
-    - 8
-    gflu_dropout:
-    - 0.0
-    - 0.05
-    tree_dropout:
-    - 0.0
-    - 0.05
-    tree_wise_attention_dropout:
-    - 0.0
-    - 0.05
-    embedding_dropout:
-    - 0
-    - 0.2
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: adult
-  model: fttransformer
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
-      tol: 1.0e-05
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 8
-      attn_feature_importance: false
-    batch_size:
-    - 1024
-    - 2048
-    - 4096
-    num_heads:
-    - 4
-    - 10
-    input_embed_dim_multiplier:
-    - 2
-    - 6
-    embedding_initialization:
-    - kaiming_uniform
-    - kaiming_normal
-    embedding_dropout:
-    - 0.05
-    - 0.2
-    shared_embedding_fraction:
-    - 0.125
-    - 0.25
-    - 0.5
-    num_attn_blocks:
-    - 4
-    - 8
-    attn_dropout:
-    - 0.05
-    - 0.2
-    add_norm_dropout:
-    - 0.05
-    - 0.2
-    ff_dropout:
-    - 0.05
-    - 0.2
-    ff_hidden_multiplier:
-    - 4
-    - 32
-    transformer_activation:
-    - GEGLU
-    - ReGLU
-    - SwiGLU
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: adult
-  model: categoryembedding
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
-      tol: 1.0e-05
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 8
-    batch_size:
-    - 1024
-    - 2048
-    - 4096
-    layers:
-    - 128-64-32
-    - 100-50-24
-    - 128-64-32-16
-    - 256-128-64
-    activation:
-    - ReLU
-    - LeakyReLU
-    initialization:
-    - kaiming
-    - xavier
-    dropout:
-    - 0.0
-    - 0.3
-    embedding_dropout:
-    - 0.0
-    - 0.3
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: adult
-  model: gandalf
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
-      tol: 1.0e-05
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 8
-    batch_size:
-    - 1024
-    - 2048
-    - 4096
-    gflu_stages:
-    - 4
-    - 10
-    gflu_dropout:
-    - 0.0
-    - 0.3
-    embedding_dropout:
-    - 0.0
-    - 0.3
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: adult
   model: tabtransformer
   best_params: {}
   param_grid:
-    outer_params:
+    outer_params: &id032
       hyperopt_evals: 50
       auto_lr_find: true
       precision: 16
@@ -244,43 +10,43 @@
       max_epochs: 1000
       val_size: 0.15
       early_stopping_patience: 8
-    batch_size:
+    batch_size: &id033
     - 1024
     - 2048
     - 4096
-    embedding_bias:
+    embedding_bias: &id034
     - true
     - false
-    embedding_initialization:
+    embedding_initialization: &id035
     - kaiming_uniform
     - kaiming_normal
-    shared_embedding_fraction:
+    shared_embedding_fraction: &id036
     - 0.125
     - 0.25
     - 0.5
-    num_attn_blocks:
+    num_attn_blocks: &id037
     - 4
     - 10
-    attn_dropout:
+    attn_dropout: &id038
     - 0.05
     - 0.3
-    add_norm_dropout:
+    add_norm_dropout: &id039
     - 0.05
     - 0.3
-    ff_dropout:
+    ff_dropout: &id040
     - 0.05
     - 0.3
-    ff_hidden_multiplier:
+    ff_hidden_multiplier: &id041
     - 2
     - 6
-    transformer_activation:
+    transformer_activation: &id042
     - GEGLU
     - ReGLU
     - SwiGLU
-    embedding_dropout:
+    embedding_dropout: &id043
     - 0.05
     - 0.3
-    optimizer_fn:
+    optimizer_fn: &id044
       Adam:
         weight_decay:
         - 0.0001
@@ -289,7 +55,7 @@
         weight_decay:
         - 0.0001
         - 1.0e-05
-    scheduler_fn:
+    scheduler_fn: &id045
       ReduceLROnPlateau:
         factor:
         - 0.1
@@ -470,7 +236,7 @@
   model: tabnet
   best_params: {}
   param_grid:
-    outer_params:
+    outer_params: &id046
       hyperopt_evals: 50
       auto_lr_find: true
       precision: 16
@@ -478,37 +244,37 @@
       max_epochs: 1000
       val_size: 0.15
       early_stopping_patience: 8
-    virtual_batch_size_ratio:
+    virtual_batch_size_ratio: &id047
     - 0.125
     - 0.25
     - 0.5
     - 1.0
-    batch_size:
+    batch_size: &id048
     - 1024
     - 2048
     - 4096
-    weights:
+    weights: &id049
     - 0
     - 1
-    mask_type:
+    mask_type: &id050
     - sparsemax
     - entmax
-    n_d:
+    n_d: &id051
     - 6
     - 32
-    n_steps:
+    n_steps: &id052
     - 1
     - 6
-    gamma:
+    gamma: &id053
     - 1.0
     - 2.0
-    n_independent:
+    n_independent: &id054
     - 1
     - 3
-    n_shared:
+    n_shared: &id055
     - 1
     - 3
-    optimizer_fn:
+    optimizer_fn: &id056
       Adam:
         weight_decay:
         - 0.0001
@@ -517,7 +283,7 @@
         weight_decay:
         - 0.0001
         - 1.0e-05
-    scheduler_fn:
+    scheduler_fn: &id057
       ReduceLROnPlateau:
         factor:
         - 0.1
@@ -619,3 +385,163 @@
     n_shared: *id014
     optimizer_fn: *id015
     scheduler_fn: *id016
+- dataset: creditcard
+  model: fttransformer
+  best_params: {}
+  param_grid:
+    outer_params: &id017
+      hyperopt_evals: 50
+      auto_lr_find: true
+      precision: 16
+      tol: 1.0e-05
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 8
+      attn_feature_importance: false
+    batch_size: &id018
+    - 1024
+    - 2048
+    - 4096
+    num_heads: &id019
+    - 4
+    - 10
+    input_embed_dim_multiplier: &id020
+    - 2
+    - 6
+    embedding_initialization: &id021
+    - kaiming_uniform
+    - kaiming_normal
+    embedding_dropout: &id022
+    - 0.05
+    - 0.2
+    shared_embedding_fraction: &id023
+    - 0.125
+    - 0.25
+    - 0.5
+    num_attn_blocks: &id024
+    - 4
+    - 8
+    attn_dropout: &id025
+    - 0.05
+    - 0.2
+    add_norm_dropout: &id026
+    - 0.05
+    - 0.2
+    ff_dropout: &id027
+    - 0.05
+    - 0.2
+    ff_hidden_multiplier: &id028
+    - 4
+    - 32
+    transformer_activation: &id029
+    - GEGLU
+    - ReGLU
+    - SwiGLU
+    optimizer_fn: &id030
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn: &id031
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: covertype
+  model: fttransformer
+  best_params: {}
+  param_grid:
+    outer_params: *id017
+    batch_size: *id018
+    num_heads: *id019
+    input_embed_dim_multiplier: *id020
+    embedding_initialization: *id021
+    embedding_dropout: *id022
+    shared_embedding_fraction: *id023
+    num_attn_blocks: *id024
+    attn_dropout: *id025
+    add_norm_dropout: *id026
+    ff_dropout: *id027
+    ff_hidden_multiplier: *id028
+    transformer_activation: *id029
+    optimizer_fn: *id030
+    scheduler_fn: *id031
+- dataset: creditcard
+  model: tabtransformer
+  best_params: {}
+  param_grid:
+    outer_params: *id032
+    batch_size: *id033
+    embedding_bias: *id034
+    embedding_initialization: *id035
+    shared_embedding_fraction: *id036
+    num_attn_blocks: *id037
+    attn_dropout: *id038
+    add_norm_dropout: *id039
+    ff_dropout: *id040
+    ff_hidden_multiplier: *id041
+    transformer_activation: *id042
+    embedding_dropout: *id043
+    optimizer_fn: *id044
+    scheduler_fn: *id045
+- dataset: covertype
+  model: tabtransformer
+  best_params: {}
+  param_grid:
+    outer_params: *id032
+    batch_size: *id033
+    embedding_bias: *id034
+    embedding_initialization: *id035
+    shared_embedding_fraction: *id036
+    num_attn_blocks: *id037
+    attn_dropout: *id038
+    add_norm_dropout: *id039
+    ff_dropout: *id040
+    ff_hidden_multiplier: *id041
+    transformer_activation: *id042
+    embedding_dropout: *id043
+    optimizer_fn: *id044
+    scheduler_fn: *id045
+- dataset: creditcard
+  model: tabnet
+  best_params: {}
+  param_grid:
+    outer_params: *id046
+    virtual_batch_size_ratio: *id047
+    batch_size: *id048
+    weights: *id049
+    mask_type: *id050
+    n_d: *id051
+    n_steps: *id052
+    gamma: *id053
+    n_independent: *id054
+    n_shared: *id055
+    optimizer_fn: *id056
+    scheduler_fn: *id057
+- dataset: covertype
+  model: tabnet
+  best_params: {}
+  param_grid:
+    outer_params: *id046
+    virtual_batch_size_ratio: *id047
+    batch_size: *id048
+    weights: *id049
+    mask_type: *id050
+    n_d: *id051
+    n_steps: *id052
+    gamma: *id053
+    n_independent: *id054
+    n_shared: *id055
+    optimizer_fn: *id056
+    scheduler_fn: *id057
