--- a/configuration/experiment_runs2.yml
+++ b/configuration/experiment_runs2.yml
@@ -1,5 +1,5 @@
 - dataset: heloc
-  model: tabnet
+  model: fttransformer
   best_params: {}
   param_grid:
     outer_params: &id001
@@ -10,171 +10,47 @@
       max_epochs: 1000
       val_size: 0.15
       early_stopping_patience: 8
-    virtual_batch_size_ratio: &id002
-    - 0.125
-    - 0.25
-    - 0.5
-    - 1.0
-    batch_size: &id003
-    - 1024
-    - 2048
-    - 4096
-    weights: &id004
-    - 0
-    - 1
-    mask_type: &id005
-    - sparsemax
-    - entmax
-    n_d: &id006
-    - 6
-    - 32
-    n_steps: &id007
-    - 1
-    - 6
-    gamma: &id008
-    - 1.0
-    - 2.0
-    n_independent: &id009
-    - 1
-    - 3
-    n_shared: &id010
-    - 1
-    - 3
-    optimizer_fn: &id011
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn: &id012
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: heloc
-  model: gate
-  best_params: {}
-  param_grid:
-    outer_params: &id013
-      hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
-      tol: 1.0e-05
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 8
-    batch_size: &id014
-    - 1024
-    - 2048
-    - 4096
-    tree_depth: &id015
-    - 4
-    - 6
-    num_trees: &id016
-    - 4
-    - 8
-    chain_trees: &id017
-    - false
-    - true
-    gflu_stages: &id018
-    - 3
-    - 8
-    gflu_dropout: &id019
-    - 0.0
-    - 0.05
-    tree_dropout: &id020
-    - 0.0
-    - 0.05
-    tree_wise_attention_dropout: &id021
-    - 0.0
-    - 0.05
-    embedding_dropout: &id022
-    - 0
-    - 0.2
-    optimizer_fn: &id023
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn: &id024
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: heloc
-  model: fttransformer
-  best_params: {}
-  param_grid:
-    outer_params: &id025
-      hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
-      tol: 1.0e-05
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 8
       attn_feature_importance: false
-    batch_size: &id026
+    batch_size: &id002
     - 1024
     - 2048
     - 4096
-    num_heads: &id027
+    num_heads: &id003
     - 4
     - 10
-    input_embed_dim_multiplier: &id028
+    input_embed_dim_multiplier: &id004
     - 2
     - 6
-    embedding_initialization: &id029
+    embedding_initialization: &id005
     - kaiming_uniform
     - kaiming_normal
-    embedding_dropout: &id030
+    embedding_dropout: &id006
     - 0.05
     - 0.2
-    shared_embedding_fraction: &id031
+    shared_embedding_fraction: &id007
     - 0.125
     - 0.25
     - 0.5
-    num_attn_blocks: &id032
+    num_attn_blocks: &id008
     - 4
     - 8
-    attn_dropout: &id033
+    attn_dropout: &id009
     - 0.05
     - 0.2
-    add_norm_dropout: &id034
+    add_norm_dropout: &id010
     - 0.05
     - 0.2
-    ff_dropout: &id035
+    ff_dropout: &id011
     - 0.05
     - 0.2
-    ff_hidden_multiplier: &id036
+    ff_hidden_multiplier: &id012
     - 4
     - 32
-    transformer_activation: &id037
+    transformer_activation: &id013
     - GEGLU
     - ReGLU
     - SwiGLU
-    optimizer_fn: &id038
+    optimizer_fn: &id014
       Adam:
         weight_decay:
         - 0.0001
@@ -183,7 +59,7 @@
         weight_decay:
         - 0.0001
         - 1.0e-05
-    scheduler_fn: &id039
+    scheduler_fn: &id015
       ReduceLROnPlateau:
         factor:
         - 0.1
@@ -199,7 +75,7 @@
   model: gandalf
   best_params: {}
   param_grid:
-    outer_params: &id040
+    outer_params: &id016
       hyperopt_evals: 50
       auto_lr_find: true
       precision: 16
@@ -207,20 +83,20 @@
       max_epochs: 1000
       val_size: 0.15
       early_stopping_patience: 8
-    batch_size: &id041
+    batch_size: &id017
     - 1024
     - 2048
     - 4096
-    gflu_stages: &id042
+    gflu_stages: &id018
     - 4
     - 10
-    gflu_dropout: &id043
+    gflu_dropout: &id019
     - 0.0
     - 0.3
-    embedding_dropout: &id044
+    embedding_dropout: &id020
     - 0.0
     - 0.3
-    optimizer_fn: &id045
+    optimizer_fn: &id021
       Adam:
         weight_decay:
         - 0.0001
@@ -229,7 +105,7 @@
         weight_decay:
         - 0.0001
         - 1.0e-05
-    scheduler_fn: &id046
+    scheduler_fn: &id022
       ReduceLROnPlateau:
         factor:
         - 0.1
@@ -245,7 +121,7 @@
   model: tabtransformer
   best_params: {}
   param_grid:
-    outer_params: &id047
+    outer_params: &id023
       hyperopt_evals: 50
       auto_lr_find: true
       precision: 16
@@ -253,43 +129,43 @@
       max_epochs: 1000
       val_size: 0.15
       early_stopping_patience: 8
-    batch_size: &id048
+    batch_size: &id024
     - 1024
     - 2048
     - 4096
-    embedding_bias: &id049
+    embedding_bias: &id025
     - true
     - false
-    embedding_initialization: &id050
+    embedding_initialization: &id026
     - kaiming_uniform
     - kaiming_normal
-    shared_embedding_fraction: &id051
+    shared_embedding_fraction: &id027
     - 0.125
     - 0.25
     - 0.5
-    num_attn_blocks: &id052
+    num_attn_blocks: &id028
     - 4
     - 10
-    attn_dropout: &id053
+    attn_dropout: &id029
     - 0.05
     - 0.3
-    add_norm_dropout: &id054
+    add_norm_dropout: &id030
     - 0.05
     - 0.3
-    ff_dropout: &id055
+    ff_dropout: &id031
     - 0.05
     - 0.3
-    ff_hidden_multiplier: &id056
+    ff_hidden_multiplier: &id032
     - 2
     - 6
-    transformer_activation: &id057
+    transformer_activation: &id033
     - GEGLU
     - ReGLU
     - SwiGLU
-    embedding_dropout: &id058
+    embedding_dropout: &id034
     - 0.05
     - 0.3
-    optimizer_fn: &id059
+    optimizer_fn: &id035
       Adam:
         weight_decay:
         - 0.0001
@@ -298,7 +174,7 @@
         weight_decay:
         - 0.0001
         - 1.0e-05
-    scheduler_fn: &id060
+    scheduler_fn: &id036
       ReduceLROnPlateau:
         factor:
         - 0.1
@@ -314,27 +190,27 @@
   model: catboost
   best_params: {}
   param_grid:
-    outer_params: &id061
+    outer_params: &id037
       hyperopt_evals: 50
       validation_fraction: 0.15
       early_stopping_rounds: 50
       verbose: false
-    iterations: &id062
+    iterations: &id038
     - 200
     - 3000
-    learning_rate: &id063
+    learning_rate: &id039
     - 0.001
     - 0.1
-    depth: &id064
+    depth: &id040
     - 4
     - 10
-    l2_leaf_reg: &id065
+    l2_leaf_reg: &id041
     - 0.5
     - 5.0
-    min_child_samples: &id066
+    min_child_samples: &id042
     - 1
     - 100
-    bagging_temperature: &id067
+    bagging_temperature: &id043
     - 0.1
     - 2.0
 - dataset: diabetes
@@ -435,113 +311,205 @@
   model: tabnet
   best_params: {}
   param_grid:
-    outer_params: *id001
-    virtual_batch_size_ratio: *id002
-    batch_size: *id003
-    weights: *id004
-    mask_type: *id005
-    n_d: *id006
-    n_steps: *id007
-    gamma: *id008
-    n_independent: *id009
-    n_shared: *id010
-    optimizer_fn: *id011
-    scheduler_fn: *id012
+    outer_params:
+      hyperopt_evals: 50
+      auto_lr_find: true
+      precision: 16
+      tol: 1.0e-05
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 8
+    virtual_batch_size_ratio:
+    - 0.125
+    - 0.25
+    - 0.5
+    - 1.0
+    batch_size:
+    - 1024
+    - 2048
+    - 4096
+    weights:
+    - 0
+    - 1
+    mask_type:
+    - sparsemax
+    - entmax
+    n_d:
+    - 6
+    - 32
+    n_steps:
+    - 1
+    - 6
+    gamma:
+    - 1.0
+    - 2.0
+    n_independent:
+    - 1
+    - 3
+    n_shared:
+    - 1
+    - 3
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
 - dataset: diabetes
   model: gate
   best_params: {}
   param_grid:
-    outer_params: *id013
-    batch_size: *id014
-    tree_depth: *id015
-    num_trees: *id016
-    chain_trees: *id017
-    gflu_stages: *id018
-    gflu_dropout: *id019
-    tree_dropout: *id020
-    tree_wise_attention_dropout: *id021
-    embedding_dropout: *id022
-    optimizer_fn: *id023
-    scheduler_fn: *id024
+    outer_params:
+      hyperopt_evals: 50
+      auto_lr_find: true
+      precision: 16
+      tol: 1.0e-05
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 8
+    batch_size:
+    - 1024
+    - 2048
+    - 4096
+    tree_depth:
+    - 4
+    - 6
+    num_trees:
+    - 4
+    - 8
+    chain_trees:
+    - false
+    - true
+    gflu_stages:
+    - 3
+    - 8
+    gflu_dropout:
+    - 0.0
+    - 0.05
+    tree_dropout:
+    - 0.0
+    - 0.05
+    tree_wise_attention_dropout:
+    - 0.0
+    - 0.05
+    embedding_dropout:
+    - 0
+    - 0.2
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
 - dataset: diabetes
   model: fttransformer
   best_params: {}
   param_grid:
-    outer_params: *id025
-    batch_size: *id026
-    num_heads: *id027
-    input_embed_dim_multiplier: *id028
-    embedding_initialization: *id029
-    embedding_dropout: *id030
-    shared_embedding_fraction: *id031
-    num_attn_blocks: *id032
-    attn_dropout: *id033
-    add_norm_dropout: *id034
-    ff_dropout: *id035
-    ff_hidden_multiplier: *id036
-    transformer_activation: *id037
-    optimizer_fn: *id038
-    scheduler_fn: *id039
+    outer_params: *id001
+    batch_size: *id002
+    num_heads: *id003
+    input_embed_dim_multiplier: *id004
+    embedding_initialization: *id005
+    embedding_dropout: *id006
+    shared_embedding_fraction: *id007
+    num_attn_blocks: *id008
+    attn_dropout: *id009
+    add_norm_dropout: *id010
+    ff_dropout: *id011
+    ff_hidden_multiplier: *id012
+    transformer_activation: *id013
+    optimizer_fn: *id014
+    scheduler_fn: *id015
 - dataset: diabetes
   model: gandalf
   best_params: {}
   param_grid:
-    outer_params: *id040
-    batch_size: *id041
-    gflu_stages: *id042
-    gflu_dropout: *id043
-    embedding_dropout: *id044
-    optimizer_fn: *id045
-    scheduler_fn: *id046
+    outer_params: *id016
+    batch_size: *id017
+    gflu_stages: *id018
+    gflu_dropout: *id019
+    embedding_dropout: *id020
+    optimizer_fn: *id021
+    scheduler_fn: *id022
 - dataset: diabetes
   model: tabtransformer
   best_params: {}
   param_grid:
-    outer_params: *id047
-    batch_size: *id048
-    embedding_bias: *id049
-    embedding_initialization: *id050
-    shared_embedding_fraction: *id051
-    num_attn_blocks: *id052
-    attn_dropout: *id053
-    add_norm_dropout: *id054
-    ff_dropout: *id055
-    ff_hidden_multiplier: *id056
-    transformer_activation: *id057
-    embedding_dropout: *id058
-    optimizer_fn: *id059
-    scheduler_fn: *id060
+    outer_params: *id023
+    batch_size: *id024
+    embedding_bias: *id025
+    embedding_initialization: *id026
+    shared_embedding_fraction: *id027
+    num_attn_blocks: *id028
+    attn_dropout: *id029
+    add_norm_dropout: *id030
+    ff_dropout: *id031
+    ff_hidden_multiplier: *id032
+    transformer_activation: *id033
+    embedding_dropout: *id034
+    optimizer_fn: *id035
+    scheduler_fn: *id036
 - dataset: diabetes
   model: catboost
   best_params: {}
   param_grid:
-    outer_params: *id061
-    iterations: *id062
-    learning_rate: *id063
-    depth: *id064
-    l2_leaf_reg: *id065
-    min_child_samples: *id066
-    bagging_temperature: *id067
+    outer_params: *id037
+    iterations: *id038
+    learning_rate: *id039
+    depth: *id040
+    l2_leaf_reg: *id041
+    min_child_samples: *id042
+    bagging_temperature: *id043
 - dataset: heloc
   model: resnet
   best_params: {}
   param_grid:
-    outer_params: &id068
+    outer_params: &id044
       hyperopt_evals: 50
       max_epochs: 1000
       early_stopping: true
       early_stopping_patience: 6
       tol: 1.0e-05
       validation_fraction: 0.15
-    batch_size: &id069
+    batch_size: &id045
     - 1024
     - 2048
     - 4096
-    resnet_depth: &id070
+    resnet_depth: &id046
     - resnet18
     - resnet34
     - resnet50
-    optimizer_fn: &id071
+    optimizer_fn: &id047
       Adam:
         weight_decay:
         - 1.0e-05
@@ -556,7 +524,7 @@
         learning_rate:
         - 0.0001
         - 0.001
-    scheduler_fn: &id072
+    scheduler_fn: &id048
       ReduceLROnPlateau:
         factor:
         - 0.1
@@ -572,8 +540,8 @@
   model: resnet
   best_params: {}
   param_grid:
-    outer_params: *id068
-    batch_size: *id069
-    resnet_depth: *id070
-    optimizer_fn: *id071
-    scheduler_fn: *id072
+    outer_params: *id044
+    batch_size: *id045
+    resnet_depth: *id046
+    optimizer_fn: *id047
+    scheduler_fn: *id048
