--- a/configuration/experiment_runs3.yml
+++ b/configuration/experiment_runs3.yml
@@ -1,4 +1,4 @@
-- dataset: creditcard
+- dataset: heloc
   model: xgb
   best_params: {}
   param_grid:
@@ -9,7 +9,7 @@
       verbose: false
     n_estimators: &id002
     - 100
-    - 3000
+    - 4000
     max_bin: &id003
     - 256
     - 32
@@ -18,7 +18,7 @@
     - hist
     max_depth: &id005
     - 4
-    - 10
+    - 9
     learning_rate: &id006
     - 0.1
     - 0.33
@@ -40,7 +40,7 @@
     lambda: &id012
     - 0.0
     - 5.0
-- dataset: covertype
+- dataset: diabetes
   model: xgb
   best_params: {}
   param_grid:
