--- a/configuration/experiment_runs2.yml
+++ b/configuration/experiment_runs2.yml
@@ -1,223 +1,8 @@
-- dataset: heloc
-  model: fttransformer
-  best_params: {}
-  param_grid:
-    outer_params: &id001
-      hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
-      tol: 1.0e-05
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 8
-      attn_feature_importance: false
-    batch_size: &id002
-    - 1024
-    - 2048
-    - 4096
-    num_heads: &id003
-    - 4
-    - 10
-    input_embed_dim_multiplier: &id004
-    - 2
-    - 6
-    embedding_initialization: &id005
-    - kaiming_uniform
-    - kaiming_normal
-    embedding_dropout: &id006
-    - 0.05
-    - 0.2
-    shared_embedding_fraction: &id007
-    - 0.125
-    - 0.25
-    - 0.5
-    num_attn_blocks: &id008
-    - 4
-    - 8
-    attn_dropout: &id009
-    - 0.05
-    - 0.2
-    add_norm_dropout: &id010
-    - 0.05
-    - 0.2
-    ff_dropout: &id011
-    - 0.05
-    - 0.2
-    ff_hidden_multiplier: &id012
-    - 4
-    - 32
-    transformer_activation: &id013
-    - GEGLU
-    - ReGLU
-    - SwiGLU
-    optimizer_fn: &id014
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn: &id015
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: heloc
-  model: gandalf
-  best_params: {}
-  param_grid:
-    outer_params: &id016
-      hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
-      tol: 1.0e-05
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 8
-    batch_size: &id017
-    - 1024
-    - 2048
-    - 4096
-    gflu_stages: &id018
-    - 4
-    - 10
-    gflu_dropout: &id019
-    - 0.0
-    - 0.3
-    embedding_dropout: &id020
-    - 0.0
-    - 0.3
-    optimizer_fn: &id021
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn: &id022
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: heloc
-  model: tabtransformer
-  best_params: {}
-  param_grid:
-    outer_params: &id023
-      hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
-      tol: 1.0e-05
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 8
-    batch_size: &id024
-    - 1024
-    - 2048
-    - 4096
-    embedding_bias: &id025
-    - true
-    - false
-    embedding_initialization: &id026
-    - kaiming_uniform
-    - kaiming_normal
-    shared_embedding_fraction: &id027
-    - 0.125
-    - 0.25
-    - 0.5
-    num_attn_blocks: &id028
-    - 4
-    - 10
-    attn_dropout: &id029
-    - 0.05
-    - 0.3
-    add_norm_dropout: &id030
-    - 0.05
-    - 0.3
-    ff_dropout: &id031
-    - 0.05
-    - 0.3
-    ff_hidden_multiplier: &id032
-    - 2
-    - 6
-    transformer_activation: &id033
-    - GEGLU
-    - ReGLU
-    - SwiGLU
-    embedding_dropout: &id034
-    - 0.05
-    - 0.3
-    optimizer_fn: &id035
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn: &id036
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: heloc
-  model: catboost
-  best_params: {}
-  param_grid:
-    outer_params: &id037
-      hyperopt_evals: 50
-      validation_fraction: 0.15
-      early_stopping_rounds: 50
-      verbose: false
-    iterations: &id038
-    - 200
-    - 3000
-    learning_rate: &id039
-    - 0.001
-    - 0.1
-    depth: &id040
-    - 4
-    - 10
-    l2_leaf_reg: &id041
-    - 0.5
-    - 5.0
-    min_child_samples: &id042
-    - 1
-    - 100
-    bagging_temperature: &id043
-    - 0.1
-    - 2.0
 - dataset: diabetes
   model: mlp
   best_params: {}
   param_grid:
-    outer_params:
+    outer_params: &id001
       cv_iterations: 10
       early_stopping: true
       cv_size: 5
@@ -225,7 +10,7 @@
       hyperopt_evals: 50
       n_iter_no_change: 30
       max_iter: 1000
-    hidden_layer_sizes:
+    hidden_layer_sizes: &id002
     - - 64
       - 32
       - 16
@@ -237,311 +22,67 @@
       - 64
       - 32
       - 16
-    activation:
+    activation: &id003
     - relu
     - tanh
     - logistic
-    solver:
+    solver: &id004
     - adam
     - lbfgs
-    alpha:
+    alpha: &id005
     - 0.0001
     - 0.001
     - 0.01
-    learning_rate_init:
+    learning_rate_init: &id006
     - 0.0001
     - 0.01
     - 0.1
-    beta_1:
+    beta_1: &id007
     - 0.99
     - 0.8
-    beta_2:
+    beta_2: &id008
     - 0.999
     - 0.9
-    batch_size:
+    batch_size: &id009
     - 512
     - 1024
     - 2048
-- dataset: diabetes
-  model: s1dcnn
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 50
-      max_epochs: 1000
-      early_stopping: true
-      shuffle: true
-      validation_fraction: 0.15
-      early_stopping_patience: 6
-      tol: 1.0e-05
-    batch_size:
-    - 1024
-    - 4096
-    hidden_size:
-    - 2048
-    - 4096
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 1.0e-05
-        - 0.001
-        learning_rate:
-        - 0.0001
-        - 0.01
-      AdamW:
-        weight_decay:
-        - 1.0e-05
-        - 0.001
-        learning_rate:
-        - 0.0001
-        - 0.01
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: diabetes
-  model: tabnet
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
-      tol: 1.0e-05
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 8
-    virtual_batch_size_ratio:
-    - 0.125
-    - 0.25
-    - 0.5
-    - 1.0
-    batch_size:
-    - 1024
-    - 2048
-    - 4096
-    weights:
-    - 0
-    - 1
-    mask_type:
-    - sparsemax
-    - entmax
-    n_d:
-    - 6
-    - 32
-    n_steps:
-    - 1
-    - 6
-    gamma:
-    - 1.0
-    - 2.0
-    n_independent:
-    - 1
-    - 3
-    n_shared:
-    - 1
-    - 3
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: diabetes
-  model: gate
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
-      tol: 1.0e-05
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 8
-    batch_size:
-    - 1024
-    - 2048
-    - 4096
-    tree_depth:
-    - 4
-    - 6
-    num_trees:
-    - 4
-    - 8
-    chain_trees:
-    - false
-    - true
-    gflu_stages:
-    - 3
-    - 8
-    gflu_dropout:
-    - 0.0
-    - 0.05
-    tree_dropout:
-    - 0.0
-    - 0.05
-    tree_wise_attention_dropout:
-    - 0.0
-    - 0.05
-    embedding_dropout:
-    - 0
-    - 0.2
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: diabetes
-  model: fttransformer
+- dataset: housing
+  model: mlp
   best_params: {}
   param_grid:
     outer_params: *id001
-    batch_size: *id002
-    num_heads: *id003
-    input_embed_dim_multiplier: *id004
-    embedding_initialization: *id005
-    embedding_dropout: *id006
-    shared_embedding_fraction: *id007
-    num_attn_blocks: *id008
-    attn_dropout: *id009
-    add_norm_dropout: *id010
-    ff_dropout: *id011
-    ff_hidden_multiplier: *id012
-    transformer_activation: *id013
-    optimizer_fn: *id014
-    scheduler_fn: *id015
-- dataset: diabetes
-  model: gandalf
+    hidden_layer_sizes: *id002
+    activation: *id003
+    solver: *id004
+    alpha: *id005
+    learning_rate_init: *id006
+    beta_1: *id007
+    beta_2: *id008
+    batch_size: *id009
+- dataset: creditcard
+  model: mlp
   best_params: {}
   param_grid:
-    outer_params: *id016
-    batch_size: *id017
-    gflu_stages: *id018
-    gflu_dropout: *id019
-    embedding_dropout: *id020
-    optimizer_fn: *id021
-    scheduler_fn: *id022
-- dataset: diabetes
-  model: tabtransformer
+    outer_params: *id001
+    hidden_layer_sizes: *id002
+    activation: *id003
+    solver: *id004
+    alpha: *id005
+    learning_rate_init: *id006
+    beta_1: *id007
+    beta_2: *id008
+    batch_size: *id009
+- dataset: covertype
+  model: mlp
   best_params: {}
   param_grid:
-    outer_params: *id023
-    batch_size: *id024
-    embedding_bias: *id025
-    embedding_initialization: *id026
-    shared_embedding_fraction: *id027
-    num_attn_blocks: *id028
-    attn_dropout: *id029
-    add_norm_dropout: *id030
-    ff_dropout: *id031
-    ff_hidden_multiplier: *id032
-    transformer_activation: *id033
-    embedding_dropout: *id034
-    optimizer_fn: *id035
-    scheduler_fn: *id036
-- dataset: diabetes
-  model: catboost
-  best_params: {}
-  param_grid:
-    outer_params: *id037
-    iterations: *id038
-    learning_rate: *id039
-    depth: *id040
-    l2_leaf_reg: *id041
-    min_child_samples: *id042
-    bagging_temperature: *id043
-- dataset: heloc
-  model: resnet
-  best_params: {}
-  param_grid:
-    outer_params: &id044
-      hyperopt_evals: 50
-      max_epochs: 1000
-      early_stopping: true
-      early_stopping_patience: 6
-      tol: 1.0e-05
-      validation_fraction: 0.15
-    batch_size: &id045
-    - 1024
-    - 2048
-    - 4096
-    resnet_depth: &id046
-    - resnet18
-    - resnet34
-    - resnet50
-    optimizer_fn: &id047
-      Adam:
-        weight_decay:
-        - 1.0e-05
-        - 0.001
-        learning_rate:
-        - 0.0001
-        - 0.001
-      AdamW:
-        weight_decay:
-        - 1.0e-05
-        - 0.001
-        learning_rate:
-        - 0.0001
-        - 0.001
-    scheduler_fn: &id048
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: diabetes
-  model: resnet
-  best_params: {}
-  param_grid:
-    outer_params: *id044
-    batch_size: *id045
-    resnet_depth: *id046
-    optimizer_fn: *id047
-    scheduler_fn: *id048
+    outer_params: *id001
+    hidden_layer_sizes: *id002
+    activation: *id003
+    solver: *id004
+    alpha: *id005
+    learning_rate_init: *id006
+    beta_1: *id007
+    beta_2: *id008
+    batch_size: *id009
