--- a/configuration/experiment_runs4.yml
+++ b/configuration/experiment_runs4.yml
@@ -72,7 +72,7 @@
     - 0.5
     num_attn_blocks:
     - 4
-    - 10
+    - 7
     attn_dropout:
     - 0.05
     - 0.3
@@ -121,8 +121,8 @@
       hyperopt_evals: 50
       max_epochs: 1000
       early_stopping: true
-      early_stopping_patience: 6
-      tol: 1.0e-05
+      early_stopping_patience: 4
+      tol: 0.0001
       validation_fraction: 0.15
     batch_size: &id002
     - 1024
