--- a/configuration/experiment_runs2.yml
+++ b/configuration/experiment_runs2.yml
@@ -1,51 +1,5 @@
-- dataset: heloc
-  model: gandalf
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
-      tol: 1.0e-05
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 8
-    batch_size:
-    - 1024
-    - 2048
-    - 4096
-    gflu_stages:
-    - 4
-    - 10
-    gflu_dropout:
-    - 0.0
-    - 0.3
-    embedding_dropout:
-    - 0.0
-    - 0.3
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: heloc
-  model: tabtransformer
+- dataset: diabetes
+  model: gate
   best_params: {}
   param_grid:
     outer_params:
@@ -114,23 +68,24 @@
         - 0.9
         - 0.99
 - dataset: diabetes
-  model: s1dcnn
+  model: tabnet
   best_params: {}
   param_grid:
     outer_params:
       hyperopt_evals: 50
       max_epochs: 1000
       early_stopping: true
-      shuffle: true
+      early_stopping_patience: 4
+      tol: 0.0001
       validation_fraction: 0.15
-      early_stopping_patience: 6
-      tol: 1.0e-05
     batch_size:
     - 1024
-    - 4096
-    hidden_size:
     - 2048
     - 4096
+    resnet_depth:
+    - resnet18
+    - resnet34
+    - resnet50
     optimizer_fn:
       Adam:
         weight_decay:
@@ -138,14 +93,14 @@
         - 0.001
         learning_rate:
         - 0.0001
-        - 0.01
+        - 0.001
       AdamW:
         weight_decay:
         - 1.0e-05
         - 0.001
         learning_rate:
         - 0.0001
-        - 0.01
+        - 0.001
     scheduler_fn:
       ReduceLROnPlateau:
         factor:
@@ -158,11 +113,58 @@
         gamma:
         - 0.9
         - 0.99
-- dataset: diabetes
+- dataset: breastcancer
+  model: resnet
+  best_params: {}
+  param_grid:
+    outer_params:
+      hyperopt_evals: 50
+      max_epochs: 1000
+      early_stopping: true
+      early_stopping_patience: 10
+      tol: 0.0001
+      validation_fraction: 0.15
+    batch_size:
+    - 32
+    - 64
+    - 128
+    - 256
+    resnet_depth:
+    - resnet18
+    - resnet34
+    - resnet50
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 1.0e-05
+        - 0.001
+        learning_rate:
+        - 0.0001
+        - 0.001
+      AdamW:
+        weight_decay:
+        - 1.0e-05
+        - 0.001
+        learning_rate:
+        - 0.0001
+        - 0.001
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: creditcard
   model: tabnet
   best_params: {}
   param_grid:
-    outer_params:
+    outer_params: &id001
       hyperopt_evals: 50
       auto_lr_find: true
       precision: 16
@@ -170,37 +172,37 @@
       max_epochs: 1000
       val_size: 0.15
       early_stopping_patience: 8
-    virtual_batch_size_ratio:
+    virtual_batch_size_ratio: &id002
     - 0.125
     - 0.25
     - 0.5
     - 1.0
-    batch_size:
+    batch_size: &id003
     - 1024
     - 2048
     - 4096
-    weights:
+    weights: &id004
     - 0
     - 1
-    mask_type:
+    mask_type: &id005
     - sparsemax
     - entmax
-    n_d:
+    n_d: &id006
     - 6
     - 24
-    n_steps:
+    n_steps: &id007
     - 3
     - 7
-    gamma:
+    gamma: &id008
     - 1.0
     - 2.0
-    n_independent:
+    n_independent: &id009
     - 2
     - 3
-    n_shared:
+    n_shared: &id010
     - 2
     - 3
-    optimizer_fn:
+    optimizer_fn: &id011
       Adam:
         weight_decay:
         - 0.0001
@@ -209,7 +211,7 @@
         weight_decay:
         - 0.0001
         - 1.0e-05
-    scheduler_fn:
+    scheduler_fn: &id012
       ReduceLROnPlateau:
         factor:
         - 0.1
@@ -221,136 +223,19 @@
         gamma:
         - 0.9
         - 0.99
-- dataset: diabetes
-  model: gate
+- dataset: covertype
+  model: tabnet
   best_params: {}
   param_grid:
-    outer_params:
-      hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
-      tol: 1.0e-05
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 8
-    batch_size:
-    - 1024
-    - 2048
-    - 4096
-    tree_depth:
-    - 4
-    - 6
-    num_trees:
-    - 4
-    - 8
-    chain_trees:
-    - false
-    - true
-    gflu_stages:
-    - 3
-    - 8
-    gflu_dropout:
-    - 0.0
-    - 0.05
-    tree_dropout:
-    - 0.0
-    - 0.05
-    tree_wise_attention_dropout:
-    - 0.0
-    - 0.05
-    embedding_dropout:
-    - 0
-    - 0.2
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: heloc
-  model: fttransformer
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
-      tol: 1.0e-05
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 8
-      attn_feature_importance: false
-    batch_size:
-    - 1024
-    - 2048
-    num_heads:
-    - 4
-    - 8
-    input_embed_dim_multiplier:
-    - 2
-    - 6
-    embedding_initialization:
-    - kaiming_uniform
-    - kaiming_normal
-    embedding_dropout:
-    - 0.05
-    - 0.2
-    shared_embedding_fraction:
-    - 0.125
-    - 0.25
-    - 0.5
-    num_attn_blocks:
-    - 4
-    - 7
-    attn_dropout:
-    - 0.05
-    - 0.2
-    add_norm_dropout:
-    - 0.05
-    - 0.2
-    ff_dropout:
-    - 0.05
-    - 0.2
-    ff_hidden_multiplier:
-    - 4
-    - 32
-    transformer_activation:
-    - GEGLU
-    - ReGLU
-    - SwiGLU
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
+    outer_params: *id001
+    virtual_batch_size_ratio: *id002
+    batch_size: *id003
+    weights: *id004
+    mask_type: *id005
+    n_d: *id006
+    n_steps: *id007
+    gamma: *id008
+    n_independent: *id009
+    n_shared: *id010
+    optimizer_fn: *id011
+    scheduler_fn: *id012
