--- a/configuration/experiment_runs3.yml
+++ b/configuration/experiment_runs3.yml
@@ -1,23 +1,92 @@
-- dataset: diabetes
-  model: resnet
+- dataset: housing
+  model: gate
   best_params: {}
   param_grid:
-    outer_params: &id015
+    outer_params:
+      hyperopt_evals: 50
+      auto_lr_find: true
+      precision: 16
+      tol: 1.0e-05
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 8
+    batch_size:
+    - 1024
+    - 2048
+    - 4096
+    embedding_bias:
+    - true
+    - false
+    embedding_initialization:
+    - kaiming_uniform
+    - kaiming_normal
+    shared_embedding_fraction:
+    - 0.125
+    - 0.25
+    - 0.5
+    num_attn_blocks:
+    - 4
+    - 7
+    attn_dropout:
+    - 0.05
+    - 0.3
+    add_norm_dropout:
+    - 0.05
+    - 0.3
+    ff_dropout:
+    - 0.05
+    - 0.3
+    ff_hidden_multiplier:
+    - 2
+    - 6
+    transformer_activation:
+    - GEGLU
+    - ReGLU
+    - SwiGLU
+    embedding_dropout:
+    - 0.05
+    - 0.3
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: housing
+  model: tabtransformer
+  best_params: {}
+  param_grid:
+    outer_params: &id001
       hyperopt_evals: 50
       max_epochs: 1000
       early_stopping: true
       early_stopping_patience: 4
       tol: 0.0001
       validation_fraction: 0.15
-    batch_size: &id016
+    batch_size: &id002
     - 1024
     - 2048
     - 4096
-    resnet_depth: &id017
+    resnet_depth: &id003
     - resnet18
     - resnet34
     - resnet50
-    optimizer_fn: &id018
+    optimizer_fn: &id004
       Adam:
         weight_decay:
         - 1.0e-05
@@ -32,7 +101,7 @@
         learning_rate:
         - 0.0001
         - 0.001
-    scheduler_fn: &id019
+    scheduler_fn: &id005
       ReduceLROnPlateau:
         factor:
         - 0.1
@@ -44,8 +113,55 @@
         gamma:
         - 0.9
         - 0.99
-- dataset: diabetes
+- dataset: housing
+  model: gandalf
+  best_params: {}
+  param_grid:
+    outer_params: *id001
+    batch_size: *id002
+    resnet_depth: *id003
+    optimizer_fn: *id004
+    scheduler_fn: *id005
+- dataset: housing
   model: fttransformer
+  best_params: {}
+  param_grid:
+    outer_params: &id006
+      hyperopt_evals: 50
+      validation_fraction: 0.15
+      early_stopping_rounds: 50
+      verbose: false
+    iterations: &id007
+    - 200
+    - 3000
+    learning_rate: &id008
+    - 0.001
+    - 0.1
+    depth: &id009
+    - 4
+    - 10
+    l2_leaf_reg: &id010
+    - 0.5
+    - 5.0
+    min_child_samples: &id011
+    - 1
+    - 100
+    bagging_temperature: &id012
+    - 0.1
+    - 2.0
+- dataset: housing
+  model: s1dcnn
+  best_params: {}
+  param_grid:
+    outer_params: *id006
+    iterations: *id007
+    learning_rate: *id008
+    depth: *id009
+    l2_leaf_reg: *id010
+    min_child_samples: *id011
+    bagging_temperature: *id012
+- dataset: housing
+  model: resnet
   best_params: {}
   param_grid:
     outer_params:
@@ -116,99 +232,3 @@
         gamma:
         - 0.9
         - 0.99
-- dataset: diabetes
-  model: tabtransformer
-  best_params: {}
-  param_grid:
-    outer_params: &id001
-      hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
-      tol: 1.0e-05
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 8
-    batch_size: &id002
-    - 1024
-    - 2048
-    - 4096
-    embedding_bias: &id003
-    - true
-    - false
-    embedding_initialization: &id004
-    - kaiming_uniform
-    - kaiming_normal
-    shared_embedding_fraction: &id005
-    - 0.125
-    - 0.25
-    - 0.5
-    num_attn_blocks: &id006
-    - 4
-    - 7
-    attn_dropout: &id007
-    - 0.05
-    - 0.3
-    add_norm_dropout: &id008
-    - 0.05
-    - 0.3
-    ff_dropout: &id009
-    - 0.05
-    - 0.3
-    ff_hidden_multiplier: &id010
-    - 2
-    - 6
-    transformer_activation: &id011
-    - GEGLU
-    - ReGLU
-    - SwiGLU
-    embedding_dropout: &id012
-    - 0.05
-    - 0.3
-    optimizer_fn: &id013
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn: &id014
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: diabetes
-  model: gate
-  best_params: {}
-  param_grid:
-    outer_params: *id001
-    batch_size: *id002
-    embedding_bias: *id003
-    embedding_initialization: *id004
-    shared_embedding_fraction: *id005
-    num_attn_blocks: *id006
-    attn_dropout: *id007
-    add_norm_dropout: *id008
-    ff_dropout: *id009
-    ff_hidden_multiplier: *id010
-    transformer_activation: *id011
-    embedding_dropout: *id012
-    optimizer_fn: *id013
-    scheduler_fn: *id014
-- dataset: diabetes
-  model: tabnet
-  best_params: {}
-  param_grid:
-    outer_params: *id015
-    batch_size: *id016
-    resnet_depth: *id017
-    optimizer_fn: *id018
-    scheduler_fn: *id019
