--- a/configuration/experiment_runs4.yml
+++ b/configuration/experiment_runs4.yml
@@ -55,10 +55,10 @@
       hyperopt_evals: 50
       auto_lr_find: true
       precision: 16
-      tol: 1.0e-05
+      tol: 0.001
       max_epochs: 1000
       val_size: 0.15
-      early_stopping_patience: 8
+      early_stopping_patience: 3
       attn_feature_importance: false
     batch_size: &id009
     - 1024
@@ -176,3 +176,49 @@
     transformer_activation: *id020
     optimizer_fn: *id021
     scheduler_fn: *id022
+- dataset: heloc
+  model: resnet
+  best_params: {}
+  param_grid:
+    outer_params:
+      hyperopt_evals: 50
+      max_epochs: 1000
+      early_stopping: true
+      early_stopping_patience: 4
+      tol: 0.0001
+      validation_fraction: 0.15
+    batch_size:
+    - 1024
+    - 2048
+    - 4096
+    resnet_depth:
+    - resnet18
+    - resnet34
+    - resnet50
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 1.0e-05
+        - 0.001
+        learning_rate:
+        - 0.0001
+        - 0.001
+      AdamW:
+        weight_decay:
+        - 1.0e-05
+        - 0.001
+        learning_rate:
+        - 0.0001
+        - 0.001
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
