--- a/configuration/experiment_runs1.yml
+++ b/configuration/experiment_runs1.yml
@@ -1,5 +1,50 @@
-- dataset: diabetes
-  model: tabtransformer
+- dataset: creditcard
+  model: resnet
+  best_params: {}
+  param_grid:
+    outer_params:
+      hyperopt_evals: 10
+      max_epochs: 1000
+      early_stopping: true
+      early_stopping_patience: 2
+      tol: 1.0e-07
+      validation_fraction: 0.15
+    batch_size:
+    - 2048
+    - 4096
+    resnet_depth:
+    - resnet18
+    - resnet34
+    - resnet50
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 1.0e-05
+        - 0.001
+        learning_rate:
+        - 0.0001
+        - 0.001
+      AdamW:
+        weight_decay:
+        - 1.0e-05
+        - 0.001
+        learning_rate:
+        - 0.0001
+        - 0.001
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: heloc
+  model: fttransformer
   best_params: {}
   param_grid:
     outer_params:
@@ -10,42 +55,45 @@
       max_epochs: 1000
       val_size: 0.15
       early_stopping_patience: 3
+      attn_feature_importance: false
     batch_size:
     - 1024
     - 2048
-    - 4096
-    embedding_bias:
-    - true
-    - false
+    num_heads:
+    - 4
+    - 6
+    input_embed_dim_multiplier:
+    - 2
+    - 4
     embedding_initialization:
     - kaiming_uniform
     - kaiming_normal
+    embedding_dropout:
+    - 0.05
+    - 0.2
     shared_embedding_fraction:
     - 0.125
     - 0.25
     - 0.5
     num_attn_blocks:
     - 4
-    - 7
+    - 6
     attn_dropout:
     - 0.05
-    - 0.3
+    - 0.2
     add_norm_dropout:
     - 0.05
-    - 0.3
+    - 0.2
     ff_dropout:
     - 0.05
-    - 0.3
+    - 0.2
     ff_hidden_multiplier:
-    - 2
-    - 6
+    - 4
+    - 32
     transformer_activation:
     - GEGLU
     - ReGLU
     - SwiGLU
-    embedding_dropout:
-    - 0.05
-    - 0.3
     optimizer_fn:
       Adam:
         weight_decay:
@@ -67,59 +115,3 @@
         gamma:
         - 0.9
         - 0.99
-- dataset: titanic
-  model: resnet
-  best_params: {}
-  param_grid:
-    outer_params: &id001
-      hyperopt_evals: 10
-      max_epochs: 1000
-      early_stopping: true
-      early_stopping_patience: 10
-      tol: 0.0001
-      validation_fraction: 0.15
-    batch_size: &id002
-    - 32
-    - 64
-    - 128
-    - 256
-    resnet_depth: &id003
-    - resnet18
-    - resnet34
-    - resnet50
-    optimizer_fn: &id004
-      Adam:
-        weight_decay:
-        - 1.0e-05
-        - 0.001
-        learning_rate:
-        - 0.0001
-        - 0.001
-      AdamW:
-        weight_decay:
-        - 1.0e-05
-        - 0.001
-        learning_rate:
-        - 0.0001
-        - 0.001
-    scheduler_fn: &id005
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: ageconditions
-  model: resnet
-  best_params: {}
-  param_grid:
-    outer_params: *id001
-    batch_size: *id002
-    resnet_depth: *id003
-    optimizer_fn: *id004
-    scheduler_fn: *id005
