--- a/configuration/experiment_runs2.yml
+++ b/configuration/experiment_runs2.yml
@@ -1,8 +1,8 @@
-- dataset: diabetes
-  model: tabnet
+- dataset: covertype
+  model: autoint
   best_params: {}
   param_grid:
-    outer_params: &id001
+    outer_params:
       hyperopt_evals: 10
       auto_lr_find: true
       precision: 16
@@ -10,92 +10,69 @@
       max_epochs: 1000
       val_size: 0.15
       early_stopping_patience: 3
-    virtual_batch_size_ratio: &id002
-    - 0.125
-    - 0.25
-    - 0.5
-    - 1.0
-    batch_size: &id003
+    batch_size:
     - 1024
     - 2048
-    - 4096
-    weights: &id004
-    - 0
-    - 1
-    mask_type: &id005
-    - sparsemax
-    - entmax
-    n_d: &id006
+    - 3500
+    attn_embed_dim_multiplier:
+    - 2
+    - 16
+    num_heads:
+    - 2
+    - 8
+    num_attn_blocks:
+    - 2
     - 6
-    - 24
-    n_steps: &id007
-    - 3
-    - 7
-    gamma: &id008
-    - 1.0
-    - 2.0
-    n_independent: &id009
-    - 2
-    - 3
-    n_shared: &id010
-    - 2
-    - 3
-    optimizer_fn: &id011
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn: &id012
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: breastcancer
-  model: resnet
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 10
-      max_epochs: 1000
-      early_stopping: true
-      early_stopping_patience: 10
-      tol: 0.0001
-      validation_fraction: 0.15
-    batch_size:
+    attn_dropouts:
+    - 0.0
+    - 0.3
+    embedding_dim:
+    - 8
     - 32
-    - 64
-    - 128
-    - 256
-    resnet_depth:
-    - resnet18
-    - resnet34
-    - resnet50
+    embedding_initialization:
+    - kaiming_uniform
+    - kaiming_normal
+    embedding_bias:
+    - true
+    - false
+    share_embedding:
+    - true
+    - false
+    share_embedding_strategy:
+    - add
+    - fraction
+    shared_embedding_fraction:
+    - 0.25
+    - 0.1
+    - 0.5
+    deep_layers:
+    - true
+    - false
+    layers:
+    - 128-64-32
+    - 128-64-32-16
+    - 256-128-64
+    dropout:
+    - 0.0
+    - 0.3
+    activation:
+    - ReLU
+    - LeakyReLU
+    initialization:
+    - kaiming
+    - xavier
+    attention_pooling:
+    - true
+    - false
     optimizer_fn:
       Adam:
         weight_decay:
-        - 1.0e-05
-        - 0.001
-        learning_rate:
         - 0.0001
-        - 0.001
+        - 1.0e-05
       AdamW:
         weight_decay:
-        - 1.0e-05
-        - 0.001
-        learning_rate:
         - 0.0001
-        - 0.001
+        - 1.0e-05
     scheduler_fn:
       ReduceLROnPlateau:
         factor:
@@ -108,39 +85,212 @@
         gamma:
         - 0.9
         - 0.99
-- dataset: creditcard
-  model: tabnet
-  best_params: {}
-  param_grid:
-    outer_params: *id001
-    virtual_batch_size_ratio: *id002
-    batch_size: *id003
-    weights: *id004
-    mask_type: *id005
-    n_d: *id006
-    n_steps: *id007
-    gamma: *id008
-    n_independent: *id009
-    n_shared: *id010
-    optimizer_fn: *id011
-    scheduler_fn: *id012
 - dataset: covertype
-  model: tabnet
+  model: tabtransformer
   best_params: {}
   param_grid:
-    outer_params: *id001
-    virtual_batch_size_ratio: *id002
-    batch_size: *id003
-    weights: *id004
-    mask_type: *id005
-    n_d: *id006
-    n_steps: *id007
-    gamma: *id008
-    n_independent: *id009
-    n_shared: *id010
-    optimizer_fn: *id011
-    scheduler_fn: *id012
-- dataset: diabetes
+    outer_params:
+      hyperopt_evals: 10
+      auto_lr_find: true
+      precision: 16
+      tol: 0.001
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 3
+    batch_size:
+    - 2048
+    - 4096
+    embedding_bias:
+    - true
+    - false
+    embedding_initialization:
+    - kaiming_uniform
+    - kaiming_normal
+    shared_embedding_fraction:
+    - 0.125
+    - 0.25
+    - 0.5
+    num_attn_blocks:
+    - 4
+    - 7
+    attn_dropout:
+    - 0.05
+    - 0.3
+    add_norm_dropout:
+    - 0.05
+    - 0.3
+    ff_dropout:
+    - 0.05
+    - 0.3
+    ff_hidden_multiplier:
+    - 2
+    - 6
+    transformer_activation:
+    - GEGLU
+    - ReGLU
+    - SwiGLU
+    embedding_dropout:
+    - 0.05
+    - 0.3
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: covertype
+  model: node
+  best_params: {}
+  param_grid:
+    outer_params:
+      hyperopt_evals: 10
+      auto_lr_find: true
+      precision: 16
+      tol: 0.001
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 3
+    batch_size:
+    - 800
+    - 1500
+    num_layers:
+    - 1
+    - 2
+    - 3
+    num_trees:
+    - 12
+    - 128
+    additional_tree_output_dim:
+    - 2
+    - 3
+    - 4
+    depth:
+    - 5
+    - 7
+    choice_function:
+    - entmax15
+    - sparsemax
+    bin_function:
+    - entmoid15
+    - sparsemoid
+    input_dropout:
+    - 0.0
+    - 0.1
+    embedding_dropout:
+    - 0.0
+    - 0.1
+    embed_categorical:
+    - true
+    - false
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: covertype
+  model: fttransformer
+  best_params: {}
+  param_grid:
+    outer_params:
+      hyperopt_evals: 10
+      auto_lr_find: true
+      precision: 16
+      tol: 0.001
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 3
+      attn_feature_importance: false
+    batch_size:
+    - 1024
+    - 2048
+    num_heads:
+    - 4
+    - 6
+    input_embed_dim_multiplier:
+    - 2
+    - 4
+    embedding_initialization:
+    - kaiming_uniform
+    - kaiming_normal
+    embedding_dropout:
+    - 0.05
+    - 0.2
+    shared_embedding_fraction:
+    - 0.125
+    - 0.25
+    - 0.5
+    num_attn_blocks:
+    - 4
+    - 6
+    attn_dropout:
+    - 0.05
+    - 0.2
+    add_norm_dropout:
+    - 0.05
+    - 0.2
+    ff_dropout:
+    - 0.05
+    - 0.2
+    ff_hidden_multiplier:
+    - 4
+    - 32
+    transformer_activation:
+    - GEGLU
+    - ReGLU
+    - SwiGLU
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: covertype
   model: gate
   best_params: {}
   param_grid:
@@ -153,7 +303,6 @@
       val_size: 0.15
       early_stopping_patience: 3
     batch_size:
-    - 1024
     - 2048
     - 4096
     tree_depth:
@@ -198,3 +347,45 @@
         gamma:
         - 0.9
         - 0.99
+- dataset: covertype
+  model: xgb
+  best_params: {}
+  param_grid:
+    outer_params:
+      hyperopt_evals: 10
+      validation_fraction: 0.15
+      early_stopping_rounds: 50
+      verbose: false
+    n_estimators:
+    - 100
+    - 4000
+    max_bin:
+    - 256
+    - 32
+    tree_method:
+    - auto
+    - hist
+    max_depth:
+    - 4
+    - 9
+    learning_rate:
+    - 0.1
+    - 0.33
+    subsample:
+    - 0.7
+    - 1.0
+    colsample_bytree:
+    - 0.5
+    - 1.0
+    min_child_weight:
+    - 1
+    - 10
+    alpha:
+    - 0.0
+    - 5.0
+    gamma:
+    - 0.0
+    - 5.0
+    lambda:
+    - 0.0
+    - 5.0
